[gd_scene load_steps=72 format=3 uid="uid://cpgg1tgmt042r"]

[ext_resource type="Texture2D" uid="uid://58o5fttc8ijb" path="res://Assets/Knight/Colour2/NoOutline/120x80_PNGSheets/_Idle.png" id="1_5riow"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_n52db"]
[ext_resource type="Texture2D" uid="uid://dw55qsfbnwvb" path="res://Assets/Knight/Colour2/NoOutline/120x80_PNGSheets/_DeathNoMovement.png" id="2_g1kn6"]
[ext_resource type="Texture2D" uid="uid://8j7vpofl5e1w" path="res://Assets/Knight/Colour2/NoOutline/120x80_PNGSheets/_Fall.png" id="3_gn721"]
[ext_resource type="Texture2D" uid="uid://ydplxdos1lvl" path="res://Assets/Knight/Colour2/NoOutline/120x80_PNGSheets/_Run.png" id="3_owp8e"]
[ext_resource type="Texture2D" uid="uid://b2wl03hec0d1x" path="res://Assets/Knight/Colour2/NoOutline/120x80_PNGSheets/_Jump.png" id="4_w068m"]
[ext_resource type="Texture2D" uid="uid://bdqu72ld6b36k" path="res://Assets/Knight/Colour2/NoOutline/120x80_PNGSheets/_WallSlide.png" id="6_14o1g"]
[ext_resource type="Texture2D" uid="uid://dfeplplw1qqo6" path="res://Assets/Knight/Colour2/NoOutline/120x80_PNGSheets/_SlideAll.png" id="6_pxk65"]
[ext_resource type="PackedScene" uid="uid://cjhe4o3xlgesq" path="res://Scenes/components/animation_component.tscn" id="9_p1yu8"]
[ext_resource type="PackedScene" uid="uid://cfri8kd8qq3fk" path="res://Scenes/components/gravity_component.tscn" id="9_qm0m2"]
[ext_resource type="PackedScene" uid="uid://cxofpkd6adspv" path="res://Scenes/components/input_component.tscn" id="10_7vrsc"]
[ext_resource type="PackedScene" uid="uid://dp0ys2nhadjgf" path="res://Scenes/UI/hud.tscn" id="10_sl6sg"]
[ext_resource type="PackedScene" uid="uid://br777x3qmu27c" path="res://Scenes/components/movement_component.tscn" id="11_vlomr"]
[ext_resource type="PackedScene" uid="uid://cdeb746m3nacb" path="res://Scenes/components/jump_component.tscn" id="13_flvqh"]
[ext_resource type="PackedScene" uid="uid://bhx7daj7b64nm" path="res://Scenes/components/wall_jump_component.tscn" id="14_vo8fn"]
[ext_resource type="PackedScene" uid="uid://dpkkbxhmu6ilf" path="res://Scenes/components/slide_component.tscn" id="15_0mxp2"]
[ext_resource type="PackedScene" uid="uid://k40fwd340pol" path="res://Scenes/components/health_component.tscn" id="16_igopq"]
[ext_resource type="Shader" path="res://shaders/pixelate.gdshader" id="17_72r2k"]
[ext_resource type="AudioStream" uid="uid://bmeikdynimwij" path="res://Assets/Audio/playersounds/whoosh-vortex-243128.mp3" id="19_yjahw"]
[ext_resource type="AudioStream" uid="uid://bonekhb5njyig" path="res://Assets/Audio/playersounds/whoosh-motion-243505.mp3" id="20_f0auw"]
[ext_resource type="AudioStream" uid="uid://7cafe5o3sier" path="res://Assets/Audio/playersounds/jump-land-01.mp3" id="20_fyw26"]
[ext_resource type="AudioStream" uid="uid://sxf51kcjjb7y" path="res://Assets/Audio/playersounds/jump-land-03.mp3" id="21_jimpw"]
[ext_resource type="AudioStream" uid="uid://ct664vg3ocv61" path="res://Assets/Audio/playersounds/skid.mp3" id="22_cotok"]
[ext_resource type="AudioStream" uid="uid://ul406bc7u6d3" path="res://Assets/Audio/playersounds/piano-slam-97095.mp3" id="24_i40a2"]
[ext_resource type="AudioStream" uid="uid://bgbjprxe54k4w" path="res://Assets/Audio/playersounds/zoom-up-2-slower-delay-107050.mp3" id="25_2h8f8"]
[ext_resource type="AudioStream" uid="uid://bngglkg5w8vy0" path="res://Assets/Audio/playersounds/armour.mp3" id="26_ock5w"]

[sub_resource type="AtlasTexture" id="AtlasTexture_24p70"]
atlas = ExtResource("2_g1kn6")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_newue"]
atlas = ExtResource("2_g1kn6")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q17me"]
atlas = ExtResource("2_g1kn6")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahcoi"]
atlas = ExtResource("2_g1kn6")
region = Rect2(360, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xr6nw"]
atlas = ExtResource("2_g1kn6")
region = Rect2(480, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_04n3c"]
atlas = ExtResource("2_g1kn6")
region = Rect2(600, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_suhqo"]
atlas = ExtResource("2_g1kn6")
region = Rect2(720, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6r2m"]
atlas = ExtResource("2_g1kn6")
region = Rect2(840, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ici5o"]
atlas = ExtResource("2_g1kn6")
region = Rect2(960, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_arxwy"]
atlas = ExtResource("2_g1kn6")
region = Rect2(1080, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds7s0"]
atlas = ExtResource("3_gn721")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbb18"]
atlas = ExtResource("3_gn721")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bs8w"]
atlas = ExtResource("3_gn721")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2bvq"]
atlas = ExtResource("1_5riow")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3v22"]
atlas = ExtResource("1_5riow")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyo33"]
atlas = ExtResource("1_5riow")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2o7gk"]
atlas = ExtResource("1_5riow")
region = Rect2(360, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah865"]
atlas = ExtResource("1_5riow")
region = Rect2(480, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_urkp8"]
atlas = ExtResource("1_5riow")
region = Rect2(600, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_53etd"]
atlas = ExtResource("1_5riow")
region = Rect2(720, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjnfj"]
atlas = ExtResource("1_5riow")
region = Rect2(840, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv08e"]
atlas = ExtResource("1_5riow")
region = Rect2(960, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ns1s"]
atlas = ExtResource("1_5riow")
region = Rect2(1080, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_035mr"]
atlas = ExtResource("4_w068m")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7o4p"]
atlas = ExtResource("4_w068m")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv87g"]
atlas = ExtResource("4_w068m")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1i37"]
atlas = ExtResource("3_owp8e")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgl57"]
atlas = ExtResource("3_owp8e")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jur5x"]
atlas = ExtResource("3_owp8e")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7fgs"]
atlas = ExtResource("3_owp8e")
region = Rect2(360, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l4b2p"]
atlas = ExtResource("3_owp8e")
region = Rect2(480, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivqj5"]
atlas = ExtResource("3_owp8e")
region = Rect2(600, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tarth"]
atlas = ExtResource("3_owp8e")
region = Rect2(720, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wueku"]
atlas = ExtResource("3_owp8e")
region = Rect2(840, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejkfb"]
atlas = ExtResource("3_owp8e")
region = Rect2(960, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4f5x"]
atlas = ExtResource("3_owp8e")
region = Rect2(1080, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8huj2"]
atlas = ExtResource("6_pxk65")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vr5th"]
atlas = ExtResource("6_pxk65")
region = Rect2(240, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jckr"]
atlas = ExtResource("6_14o1g")
region = Rect2(0, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oropu"]
atlas = ExtResource("6_14o1g")
region = Rect2(120, 40, 120, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_eomed"]
atlas = ExtResource("6_14o1g")
region = Rect2(240, 40, 120, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_npepe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24p70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_newue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q17me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahcoi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xr6nw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04n3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suhqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6r2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ici5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arxwy")
}],
"loop": false,
"name": &"dead",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds7s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbb18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bs8w")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2bvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f3v22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyo33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2o7gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah865")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urkp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53etd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjnfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv08e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ns1s")
}],
"loop": true,
"name": &"idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_035mr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7o4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv87g")
}],
"loop": true,
"name": &"jump",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1i37")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgl57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jur5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7fgs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l4b2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivqj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tarth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wueku")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejkfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4f5x")
}],
"loop": true,
"name": &"run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8huj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vr5th")
}],
"loop": true,
"name": &"slide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jckr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oropu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eomed")
}],
"loop": true,
"name": &"wall_slide",
"speed": 8.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lxprx"]
shader = ExtResource("17_72r2k")
shader_parameter/pixel_size = 0.001

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yb28k"]
radius = 3.0
height = 35.999

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4lfo"]
size = Vector2(10.6874, 20.3716)

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("gravity_component", "input_component", "movement_component", "animation_component", "jump_component", "wall_jump_component", "slide_component", "health_component", "pixelation", "jump_audio", "air_jump_audio", "wall_jump_audio", "land_audio", "walk_audio", "wall_slide_audio", "slide_audio", "footstep_audio")]
z_index = 5
floor_snap_length = 10.0
script = ExtResource("1_n52db")
gravity_component = NodePath("GravityComponent")
input_component = NodePath("InputComponent")
movement_component = NodePath("MovementComponent")
animation_component = NodePath("AnimationComponent")
jump_component = NodePath("JumpComponent")
wall_jump_component = NodePath("WallJumpComponent")
slide_component = NodePath("SlideComponent")
health_component = NodePath("HealthComponent")
pixelation = NodePath("CanvasLayer/pixelation")
jump_audio = NodePath("JumpAudio")
air_jump_audio = NodePath("AirJumpAudio")
wall_jump_audio = NodePath("WallJumpAudio")
land_audio = NodePath("LandAudio")
walk_audio = NodePath("WallSlideAudio")
wall_slide_audio = NodePath("WallSlideAudio")
slide_audio = NodePath("SlideAudio")
footstep_audio = NodePath("StepAudio")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, -20)
sprite_frames = SubResource("SpriteFrames_npepe")
animation = &"run"
autoplay = "idle"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="pixelation" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_lxprx")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -191.0
offset_top = -187.0
offset_right = 129.0
offset_bottom = -7.0
grow_horizontal = 2
grow_vertical = 2

[node name="HUD" parent="CanvasLayer" instance=ExtResource("10_sl6sg")]

[node name="StandingCollision" type="CollisionShape2D" parent="."]
position = Vector2(3, -19)
shape = SubResource("CapsuleShape2D_yb28k")

[node name="CrouchingCollision" type="CollisionShape2D" parent="."]
position = Vector2(3.19348, -4.97585)
rotation = 1.57836
shape = SubResource("RectangleShape2D_a4lfo")
disabled = true

[node name="GravityComponent" parent="." node_paths=PackedStringArray("wall_slide_audio") instance=ExtResource("9_qm0m2")]
gravity = 1300.0
wall_slide_audio = NodePath("../WallSlideAudio")

[node name="InputComponent" parent="." instance=ExtResource("10_7vrsc")]

[node name="MovementComponent" parent="." instance=ExtResource("11_vlomr")]
speed = 280.0

[node name="AnimationComponent" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("9_p1yu8")]
sprite = NodePath("../AnimatedSprite2D")

[node name="JumpComponent" parent="." node_paths=PackedStringArray("jump_audio", "air_jump_audio", "land_audio") instance=ExtResource("13_flvqh")]
jump_audio = NodePath("../JumpAudio")
air_jump_audio = NodePath("../AirJumpAudio")
land_audio = NodePath("../LandAudio")

[node name="WallJumpComponent" parent="." node_paths=PackedStringArray("wall_jump_audio") instance=ExtResource("14_vo8fn")]
wall_jump_audio = NodePath("../WallJumpAudio")

[node name="SlideComponent" parent="." node_paths=PackedStringArray("slide_audio") instance=ExtResource("15_0mxp2")]
position = Vector2(3, -23)
slide_audio = NodePath("../SlideAudio")

[node name="HealthComponent" parent="." node_paths=PackedStringArray("death_audio", "respawn_audio") instance=ExtResource("16_igopq")]
max_hp = 5.0
can_respawn = true
death_audio = NodePath("../DeathAudio")
respawn_audio = NodePath("../RespawnAudio")

[node name="JumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_f0auw")
volume_db = -15.0
bus = &"SFX"

[node name="AirJumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_f0auw")
volume_db = -15.0
pitch_scale = 1.2
bus = &"SFX"

[node name="WallJumpAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_yjahw")
volume_db = -5.0
bus = &"SFX"

[node name="LandAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("20_fyw26")
bus = &"SFX"

[node name="WallSlideAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("21_jimpw")
bus = &"SFX"

[node name="SlideAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_cotok")
volume_db = -26.243
pitch_scale = 0.82
bus = &"SFX"

[node name="DeathAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("24_i40a2")
volume_db = -15.0
bus = &"SFX"

[node name="RespawnAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("25_2h8f8")
volume_db = -10.0
bus = &"SFX"

[node name="StepAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_ock5w")
volume_db = -15.0
bus = &"SFX"

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
